--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -27,22 +27,24 @@
 </footer>
 {{"<!-- /footer -->" | safeHTML}}
 
-{{ "<!-- Google Map API -->" | safeHTML }}
-{{ if .Site.Params.map.enable }}
-<script src="{{ .Site.Params.map.gmap_api | safeURL }}"></script>
-{{ end }}
+{{ "<!-- Plugins JS -->" | safeHTML }}
+{{- $js_bundle := slice -}}
 
-{{ "<!-- JS Plugins -->" | safeHTML }}
-{{ range .Site.Params.plugins.js}}
-<script src="{{ .link | absURL }}"></script>
-{{ end }}
+{{- if .Site.Params.map.enable -}}
+{{- $js_bundle := .Site.Params.map.gmap_api | safeURL  -}}
+{{- end -}}
 
-{{ "<!-- Main Script -->" | safeHTML }}
-{{ $script := resources.Get "js/script.js" | minify}}
-<script src="{{ $script.Permalink }}"></script>
+{{- range .Site.Params.plugins.js -}}
+{{- $js_bundle = $js_bundle | append ( resources.Get . ) -}}
+{{- end -}}
+
+{{- $js_bundle = $js_bundle | append ( resources.Get "js/script.js" ) -}}
+
+{{ $js_bundle := $js_bundle | resources.Concat "js/bundle.js" | fingerprint "md5" }}
+<script src="{{ $js_bundle.RelPermalink }}"></script>
 
 {{ "<!-- google analitycs -->" | safeHTML }}
-{{ with .Site.Params.google_analitycs_id }}
+{{ with .Site.Params.google_analitycs_id -}}
 <script>
   (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r;
