--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -21,6 +21,10 @@
           <br>
           <p>{{ i18n "copyright" | markdownify }}</p>
         </div>
+        {{"<!-- powered -->" | safeHTML}}
+        <div class="powered text-center">
+          <p>{{ i18n "powered" | markdownify }}</p>
+        </div>
       </div>
     </div>
   </div>
