Tune up contact section

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -119,6 +119,15 @@ p {
 
 /* Contact section */
 
+.contact-info p {
+  font-size: 2em;
+  margin-bottom: 10px;
+}
+
+.contact-details {
+  padding-top: 25px;
+}
+
 .form-meghna input:hover,
 .form-meghna textarea:hover,
 #contact-submit:hover {
