--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -19,7 +19,9 @@
       {{"<!-- Contact Details -->" | safeHTML}}
       <div class="contact-info col-lg-6 wow fadeInUp" data-wow-duration="500ms">
         <h3>{{ .subtitle | markdownify }}</h3>
-        <p> {{ .content | markdownify }} </p>
+        {{ range .content }}
+        <p> {{ .text | markdownify }} </p>
+        {{ end }}
         <div class="contact-details">
           {{ range .contact_details }}
           <div class="con-info clearfix">
