Improve bookins page

--- a/layouts/partials/bookings.html
+++ b/layouts/partials/bookings.html
@@ -19,31 +19,15 @@
       {{ range .bookings_table }}
       {{"<!-- single pricing table -->" | safeHTML}}
       <div class="col-lg-4 col-md-6 col-12 text-center wow fadeInUp" data-wow-duration="200ms">
-        <div class="price-item">
-
-          {{"<!-- plan name & value -->" | safeHTML}}
-          <div class="price-title">
-            <h3>{{ .name }}</h3>
-            <p><strong class="value">{{ .price }}</strong>/ {{ .unit }}</p>
-            <ul>
-              {{ range .extra }}
-              <li>{{ . }}</li>
-              {{ end }}
-            </ul>
+        <a class="block-link block-link-transparent" href="{{ .link | safeURL }}">
+          <div class="block-link block-link-transparent price-item">
+            {{"<!-- plan name & value -->" | safeHTML}}
+            <div class="price-title">
+              <h3>{{ .name }}</h3>
+              <p><strong class="value">{{ .price }}</strong> / {{ .unit }}</p>
+            </div>
           </div>
-
-          {{"<!-- plan description -->" | safeHTML}}
-          <ul>
-            {{ range .services }}
-            <li>{{ . }}</li>
-            {{ end }}
-          </ul>
-
-          {{"<!-- signup button -->" | safeHTML}}
-          {{ with .button }}
-          <a class="btn btn-transparent" href="{{ .link | safeURL }}">{{ .label }}</a>
-          {{ end }}
-        </div>
+        </a>
       </div>
       {{"<!-- end single pricing table -->" | safeHTML}}
       {{ end }}
