--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -42,21 +42,27 @@
             <p>{{ .content | markdownify }}</p>
           </div>
 
-          {{ if .skills }}
-          <ul class="team-skill-bar">
-            <h6>Skills</h6>
-            {{ range $index, $element:= .skills }}
-            <li>
-              <p>{{ .name }}</p>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
-                  style="width:{{ .percent }}">
-                </div>
-              </div>
-            </li>
+          {{- if .quiz -}}
+          <div class="team-quiz-container">
+            {{- range $qi, $qe := $data.team.team.quiz -}}
+            <!-- <h6>Quiz</h6> -->
+            <div class="team-quiz-question">
+              <ul>
+                {{- range $qoi, $option := .options -}}
+                {{if in $member.quiz $option }}
+                <li>
+                  <span class="team-quiz-highlight-container"><span
+                      class="team-quiz-highlight">{{ $option }}</span></span>
+                </li>
+                {{ else }}
+                <li>{{ $option }}</li>
+                {{ end }}
+                {{- end }}
+            </div>
+            </ul>
             {{ end }}
-          </ul>
-          {{ end }}
+          </div>
+          {{- end -}}
 
           {{ if .languages }}
           <ul class="team-skill-bar">
