--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -65,7 +65,7 @@
           {{- end -}}
 
           {{ if .languages }}
-          <ul class="team-skill-bar">
+          <ul class="team-languages-bar">
             <h6>Languages</h6>
             {{ range $index, $element:= .languages }}
             <li>
