--- a/layouts/partials/how.html
+++ b/layouts/partials/how.html
@@ -1,22 +1,21 @@
 {{ $data := index .Site.Data .Site.Language.Lang }}
 
-{{ with $data.bookings.bookings }}
+{{ with $data.how.spec }}
 {{"<!-- Start Pricing section -->" | safeHTML}}
-<section id="pricing" class="pricing section">
+<section id="how" class="pricing section">
   <div class="container">
     <div class="row justify-content-center">
 
       {{"<!-- section title -->" | safeHTML}}
       <div class="col-lg-12">
         <div class="title text-center wow fadeInDown" data-wow-duration="500ms">
-          <h2>{{ with .title }} {{ index (split . " ") 0 }} {{ end }}<span class="color">
-              {{ with .title }} {{ index (split . " ") 1 }} {{ end }}</span></h2>
+          <h2>Ho it<span class="color"> works</span></h2>
           <div class="border-meghna"></div>
         </div>
       </div>
       {{"<!-- /section title -->" | safeHTML}}
 
-      {{ range .bookings_table }}
+      {{ range .bookings }}
       {{"<!-- single pricing table -->" | safeHTML}}
       <div class="col-lg-4 col-md-6 col-12 text-center wow fadeInUp" data-wow-duration="200ms">
         <a class="block-link block-link-transparent" href="{{ .link | safeURL }}">
