--- a/layouts/partials/how.html
+++ b/layouts/partials/how.html
@@ -9,7 +9,9 @@
       {{"<!-- section title -->" | safeHTML}}
       <div class="col-lg-12">
         <div class="title text-center wow fadeInDown" data-wow-duration="500ms">
-          <h2>Ho it<span class="color"> works</span></h2>
+          <h2>{{ with .title }} {{ delimit (first (sub (countwords .) 1)  (split . " ")) " " }} {{ end }}<span
+              class="color">
+              {{ with .title }} {{ index (last 1 (split . " ")) 0 }} {{ end }}</span></h2>
           <div class="border-meghna"></div>
         </div>
       </div>
