--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -223,14 +223,73 @@ p {
   background: #F5A2A9;
 }
 
-/* Bookings se */
+/* Bookings */
 
-.price-title h3 {
-  color: #f5a2a9;
+.service-list {
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
 }
 
-.price-title .value {
-  color: #f5a2a9;
+.service-item {
+  border: 1px solid rgba(236, 239, 241, 0.07);
+  padding-bottom: 5px;
+  margin-bottom: 15px;
+}
+
+.service-title {
+  background-color: #292F36;
+  padding: 30px 0 20px;
+}
+
+.service-title h3 {
+  color: #F5A2A9;
+  margin: 0 0 10px;
+  text-transform: uppercase;
+}
+
+.service-title p {
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.service-title .value {
+  color: #F5A2A9;
+  font-size: 30px;
+}
+
+.service-item ul {
+  padding: 0;
+}
+
+.service-item li {
+  padding: 10px 0;
+  list-style-type: none;
+}
+
+.service-item li:last-child {
+  border-bottom: 1px solid rgba(236, 239, 241, 0.07);
+  margin-bottom: 20px;
+}
+
+.service-item li:nth-child(2n) {
+  background-color: #292F36;
+}
+
+/*=================================================================
+  Services section
+==================================================================*/
+.process-block {
+  padding: 60px 20px;
+  border-left: 1px solid rgba(236, 239, 241, 0.07);
+  border-top: 1px solid rgba(236, 239, 241, 0.07);
+  margin-bottom: 40px;
+  /* box-shadow: 2px 2px 5px rgba(44, 44, 44, 0.3), 13px 13px 0 rgba(255, 255, 255, 0.7); */
+}
+
+.process-block .process-icon {
+  margin-bottom: 10px;
+  font-size: 50px;
 }
 
 .block-link {
