--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -112,7 +112,9 @@ p {
   /* 2 */
   top: 50%;
   /* 3 */
-  transform: translate(0, -50%)
+  transform: translate(0, -50%);
+  font-size: .85em;
+  margin: auto 10px;
 }
 
 .member-photo:hover img {
